# ugc-sdk

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  setup.py
src/: lib.rs  protocol.rs
ugc_sdk/: __init__.py
